// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/boardTemplateSelector/boardTemplateSelector a focalboard Plugin should match snapshot 1`] = `
<div>
  <div
    class="BoardTemplateSelector"
  >
    <div
      class="toolbar"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="header"
    >
      <h1
        class="title"
      >
        Create a Board
      </h1>
      <p
        class="description"
      >
        Choose a template to help you get started. Easily customize the template to fit your needs, or create an empty board to start from scratch.
      </p>
    </div>
    <div
      class="templates"
    >
      <div
        class="templates-list"
      >
        <div
          class="template-item active"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template Global
          </span>
        </div>
        <div
          class="template-item"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template 1
          </span>
          <div
            class="actions"
          >
            <button
              aria-label="Delete"
              class="Button IconButton"
              title="Delete"
              type="button"
            >
              <i
                class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
              />
            </button>
            <button
              aria-label="Edit"
              class="Button IconButton"
              title="Edit"
              type="button"
            >
              <svg
                class="EditIcon Icon"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M35.2,48.7l-2,14.1c-0.1,0.9,0.2,1.9,0.8,2.5c0.6,0.6,1.3,0.9,2.1,0.9c0.1,0,0.3,0,0.4,0l14.1-2c1.7-0.2,3.4-1.1,4.6-2.3   l28.2-28.2l4.6-4.5c1.8-1.8,2.7-4.1,2.7-6.6c0-2.5-1-4.9-2.7-6.6l-4.5-4.5c-3.7-3.7-9.6-3.7-13.3,0l-4.5,4.6L37.5,44.1   C36.2,45.3,35.4,47,35.2,48.7z M74.5,15.6c1.3-1.3,3.5-1.3,4.8,0l4.5,4.5c0.6,0.6,1,1.5,1,2.4c0,0.9-0.4,1.8-1,2.4c0,0,0,0,0,0   l-2.4,2.4L72.1,18L74.5,15.6z M41.1,49.5c0.1-0.4,0.3-0.9,0.6-1.2l26.1-26.1l4.7,4.7l4.7,4.7L51,57.7c-0.3,0.3-0.7,0.5-1.2,0.6   l-10.2,1.4L41.1,49.5z"
                  />
                  <path
                    d="M88.3,35.8c-1.7,0-3,1.3-3,3v42.7c0,3.6-2.9,6.5-6.5,6.5H21.2c-3.6,0-6.5-2.9-6.5-6.5v-61c0-3.6,2.9-6.5,6.5-6.5h39.2   c1.7,0,3-1.3,3-3s-1.3-3-3-3H21.2C14.3,8,8.7,13.6,8.7,20.5v61c0,6.9,5.6,12.5,12.5,12.5h57.5c6.9,0,12.5-5.6,12.5-12.5V38.8   C91.3,37.2,89.9,35.8,88.3,35.8z"
                  />
                  <path
                    d="M24.4,72c-1.7,0-3,1.3-3,3s1.3,3,3,3h28.8c1.7,0,3-1.3,3-3s-1.3-3-3-3H24.4z"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          class="new-template"
        >
          <span
            class="template-icon"
          >
            <i
              class="CompassIcon icon-plus AddIcon"
            />
          </span>
          <span
            class="template-name"
          >
            New template
          </span>
        </div>
      </div>
      <div
        class="template-preview-box"
      >
        <div
          class="BoardTemplateSelectorPreview"
        >
          <div
            class="prevent-click"
          />
        </div>
        <div
          class="buttons"
        >
          <button
            type="button"
          >
            <span>
              Use this template
            </span>
          </button>
          <button
            type="button"
          >
            <span>
              Create empty board
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/boardTemplateSelector/boardTemplateSelector a focalboard Plugin should match snapshot with custom title and description 1`] = `
<div>
  <div
    class="BoardTemplateSelector"
  >
    <div
      class="toolbar"
    />
    <div
      class="header"
    >
      <h1
        class="title"
      >
        test-title
      </h1>
      <p
        class="description"
      >
        test-description
      </p>
    </div>
    <div
      class="templates"
    >
      <div
        class="templates-list"
      >
        <div
          class="template-item active"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template Global
          </span>
        </div>
        <div
          class="template-item"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template 1
          </span>
          <div
            class="actions"
          >
            <button
              aria-label="Delete"
              class="Button IconButton"
              title="Delete"
              type="button"
            >
              <i
                class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
              />
            </button>
            <button
              aria-label="Edit"
              class="Button IconButton"
              title="Edit"
              type="button"
            >
              <svg
                class="EditIcon Icon"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M35.2,48.7l-2,14.1c-0.1,0.9,0.2,1.9,0.8,2.5c0.6,0.6,1.3,0.9,2.1,0.9c0.1,0,0.3,0,0.4,0l14.1-2c1.7-0.2,3.4-1.1,4.6-2.3   l28.2-28.2l4.6-4.5c1.8-1.8,2.7-4.1,2.7-6.6c0-2.5-1-4.9-2.7-6.6l-4.5-4.5c-3.7-3.7-9.6-3.7-13.3,0l-4.5,4.6L37.5,44.1   C36.2,45.3,35.4,47,35.2,48.7z M74.5,15.6c1.3-1.3,3.5-1.3,4.8,0l4.5,4.5c0.6,0.6,1,1.5,1,2.4c0,0.9-0.4,1.8-1,2.4c0,0,0,0,0,0   l-2.4,2.4L72.1,18L74.5,15.6z M41.1,49.5c0.1-0.4,0.3-0.9,0.6-1.2l26.1-26.1l4.7,4.7l4.7,4.7L51,57.7c-0.3,0.3-0.7,0.5-1.2,0.6   l-10.2,1.4L41.1,49.5z"
                  />
                  <path
                    d="M88.3,35.8c-1.7,0-3,1.3-3,3v42.7c0,3.6-2.9,6.5-6.5,6.5H21.2c-3.6,0-6.5-2.9-6.5-6.5v-61c0-3.6,2.9-6.5,6.5-6.5h39.2   c1.7,0,3-1.3,3-3s-1.3-3-3-3H21.2C14.3,8,8.7,13.6,8.7,20.5v61c0,6.9,5.6,12.5,12.5,12.5h57.5c6.9,0,12.5-5.6,12.5-12.5V38.8   C91.3,37.2,89.9,35.8,88.3,35.8z"
                  />
                  <path
                    d="M24.4,72c-1.7,0-3,1.3-3,3s1.3,3,3,3h28.8c1.7,0,3-1.3,3-3s-1.3-3-3-3H24.4z"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          class="new-template"
        >
          <span
            class="template-icon"
          >
            <i
              class="CompassIcon icon-plus AddIcon"
            />
          </span>
          <span
            class="template-name"
          >
            New template
          </span>
        </div>
      </div>
      <div
        class="template-preview-box"
      >
        <div
          class="BoardTemplateSelectorPreview"
        >
          <div
            class="prevent-click"
          />
        </div>
        <div
          class="buttons"
        >
          <button
            type="button"
          >
            <span>
              Use this template
            </span>
          </button>
          <button
            type="button"
          >
            <span>
              Create empty board
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/boardTemplateSelector/boardTemplateSelector a focalboard Plugin should match snapshot without close 1`] = `
<div>
  <div
    class="BoardTemplateSelector"
  >
    <div
      class="toolbar"
    />
    <div
      class="header"
    >
      <h1
        class="title"
      >
        Create a Board
      </h1>
      <p
        class="description"
      >
        Choose a template to help you get started. Easily customize the template to fit your needs, or create an empty board to start from scratch.
      </p>
    </div>
    <div
      class="templates"
    >
      <div
        class="templates-list"
      >
        <div
          class="template-item active"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template Global
          </span>
        </div>
        <div
          class="template-item"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template 1
          </span>
          <div
            class="actions"
          >
            <button
              aria-label="Delete"
              class="Button IconButton"
              title="Delete"
              type="button"
            >
              <i
                class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
              />
            </button>
            <button
              aria-label="Edit"
              class="Button IconButton"
              title="Edit"
              type="button"
            >
              <svg
                class="EditIcon Icon"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M35.2,48.7l-2,14.1c-0.1,0.9,0.2,1.9,0.8,2.5c0.6,0.6,1.3,0.9,2.1,0.9c0.1,0,0.3,0,0.4,0l14.1-2c1.7-0.2,3.4-1.1,4.6-2.3   l28.2-28.2l4.6-4.5c1.8-1.8,2.7-4.1,2.7-6.6c0-2.5-1-4.9-2.7-6.6l-4.5-4.5c-3.7-3.7-9.6-3.7-13.3,0l-4.5,4.6L37.5,44.1   C36.2,45.3,35.4,47,35.2,48.7z M74.5,15.6c1.3-1.3,3.5-1.3,4.8,0l4.5,4.5c0.6,0.6,1,1.5,1,2.4c0,0.9-0.4,1.8-1,2.4c0,0,0,0,0,0   l-2.4,2.4L72.1,18L74.5,15.6z M41.1,49.5c0.1-0.4,0.3-0.9,0.6-1.2l26.1-26.1l4.7,4.7l4.7,4.7L51,57.7c-0.3,0.3-0.7,0.5-1.2,0.6   l-10.2,1.4L41.1,49.5z"
                  />
                  <path
                    d="M88.3,35.8c-1.7,0-3,1.3-3,3v42.7c0,3.6-2.9,6.5-6.5,6.5H21.2c-3.6,0-6.5-2.9-6.5-6.5v-61c0-3.6,2.9-6.5,6.5-6.5h39.2   c1.7,0,3-1.3,3-3s-1.3-3-3-3H21.2C14.3,8,8.7,13.6,8.7,20.5v61c0,6.9,5.6,12.5,12.5,12.5h57.5c6.9,0,12.5-5.6,12.5-12.5V38.8   C91.3,37.2,89.9,35.8,88.3,35.8z"
                  />
                  <path
                    d="M24.4,72c-1.7,0-3,1.3-3,3s1.3,3,3,3h28.8c1.7,0,3-1.3,3-3s-1.3-3-3-3H24.4z"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          class="new-template"
        >
          <span
            class="template-icon"
          >
            <i
              class="CompassIcon icon-plus AddIcon"
            />
          </span>
          <span
            class="template-name"
          >
            New template
          </span>
        </div>
      </div>
      <div
        class="template-preview-box"
      >
        <div
          class="BoardTemplateSelectorPreview"
        >
          <div
            class="prevent-click"
          />
        </div>
        <div
          class="buttons"
        >
          <button
            type="button"
          >
            <span>
              Use this template
            </span>
          </button>
          <button
            type="button"
          >
            <span>
              Create empty board
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/boardTemplateSelector/boardTemplateSelector not a focalboard Plugin should match snapshot 1`] = `
<div>
  <div
    class="BoardTemplateSelector"
  >
    <div
      class="toolbar"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="header"
    >
      <h1
        class="title"
      >
        Create a Board
      </h1>
      <p
        class="description"
      >
        Choose a template to help you get started. Easily customize the template to fit your needs, or create an empty board to start from scratch.
      </p>
    </div>
    <div
      class="templates"
    >
      <div
        class="templates-list"
      >
        <div
          class="template-item active"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template Global
          </span>
        </div>
        <div
          class="template-item"
        >
          <span
            class="template-icon"
          >
            🚴🏻‍♂️
          </span>
          <span
            class="template-name"
          >
            Template 1
          </span>
          <div
            class="actions"
          >
            <button
              aria-label="Delete"
              class="Button IconButton"
              title="Delete"
              type="button"
            >
              <i
                class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
              />
            </button>
            <button
              aria-label="Edit"
              class="Button IconButton"
              title="Edit"
              type="button"
            >
              <svg
                class="EditIcon Icon"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M35.2,48.7l-2,14.1c-0.1,0.9,0.2,1.9,0.8,2.5c0.6,0.6,1.3,0.9,2.1,0.9c0.1,0,0.3,0,0.4,0l14.1-2c1.7-0.2,3.4-1.1,4.6-2.3   l28.2-28.2l4.6-4.5c1.8-1.8,2.7-4.1,2.7-6.6c0-2.5-1-4.9-2.7-6.6l-4.5-4.5c-3.7-3.7-9.6-3.7-13.3,0l-4.5,4.6L37.5,44.1   C36.2,45.3,35.4,47,35.2,48.7z M74.5,15.6c1.3-1.3,3.5-1.3,4.8,0l4.5,4.5c0.6,0.6,1,1.5,1,2.4c0,0.9-0.4,1.8-1,2.4c0,0,0,0,0,0   l-2.4,2.4L72.1,18L74.5,15.6z M41.1,49.5c0.1-0.4,0.3-0.9,0.6-1.2l26.1-26.1l4.7,4.7l4.7,4.7L51,57.7c-0.3,0.3-0.7,0.5-1.2,0.6   l-10.2,1.4L41.1,49.5z"
                  />
                  <path
                    d="M88.3,35.8c-1.7,0-3,1.3-3,3v42.7c0,3.6-2.9,6.5-6.5,6.5H21.2c-3.6,0-6.5-2.9-6.5-6.5v-61c0-3.6,2.9-6.5,6.5-6.5h39.2   c1.7,0,3-1.3,3-3s-1.3-3-3-3H21.2C14.3,8,8.7,13.6,8.7,20.5v61c0,6.9,5.6,12.5,12.5,12.5h57.5c6.9,0,12.5-5.6,12.5-12.5V38.8   C91.3,37.2,89.9,35.8,88.3,35.8z"
                  />
                  <path
                    d="M24.4,72c-1.7,0-3,1.3-3,3s1.3,3,3,3h28.8c1.7,0,3-1.3,3-3s-1.3-3-3-3H24.4z"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          class="new-template"
        >
          <span
            class="template-icon"
          >
            <i
              class="CompassIcon icon-plus AddIcon"
            />
          </span>
          <span
            class="template-name"
          >
            New template
          </span>
        </div>
      </div>
      <div
        class="template-preview-box"
      >
        <div
          class="BoardTemplateSelectorPreview"
        >
          <div
            class="prevent-click"
          />
        </div>
        <div
          class="buttons"
        >
          <button
            type="button"
          >
            <span>
              Use this template
            </span>
          </button>
          <button
            type="button"
          >
            <span>
              Create empty board
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
